<resources>
    <string name="app_name">Lapor Gan</string>
    <string name="bgimg_desc">Start screen background image</string>
    <string name="logotext">Logo with text</string>
    <string name="btnStart">Button start screen images</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="connect_more">-------------------------------- OR --------------------------------</string>
    <string name="login">LOGIN</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="google_login">Connect with Google</string>
    <string name="fb_login">Facebook Login</string>
    <string name="title_activity_maps">HomeActivity</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="username">%1$s</string>
    <string name="add">Lapor</string>
    <string name="lapor">Lapor Keluhan</string>
    <string name="sampah">Jemput Sampah</string>
    <string name="history">History</string>
    <string name="kirim">Kirim Laporan</string>
    <string name="default_description">Tekan untuk tambah deskripsi laporan</string>
    <string name="test_sentences">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</string>
</resources>
