<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bgimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:contentDescription="@string/bgimg_desc"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bgimg_blue" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="176dp"
        android:layout_height="146dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:contentDescription="@string/logotext"
        app:layout_constraintBottom_toTopOf="@+id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_logotext" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="328dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/product_sans_r"
        android:hint="Valid email address"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white_opaque"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/bgimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/product_sans_b"
        android:letterSpacing="0.2"
        android:paddingLeft="4dp"
        android:text="@string/email"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bgimg"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/product_sans_b"
        android:letterSpacing="0.2"
        android:paddingLeft="4dp"
        android:text="@string/password"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bgimg"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="228dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/product_sans_r"
        android:hint="Min. 6 digits alphanumeric"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white_opaque"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNameHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/product_sans_b"
        android:paddingLeft="4dp"
        android:letterSpacing="0.2"
        android:text="Full name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/product_sans_r"
        android:hint="Full name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white_opaque"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameHistory" />

    <TextView
        android:id="@+id/tvSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/product_sans_r"
        android:text="@string/connect_more"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        android:fontFamily="@font/product_sans_b"
        android:text="@string/login"
        android:textColor="@color/blue3"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tvSeparator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bgimg"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnGoogle"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/common_google_signin_btn_text_light"
        android:fontFamily="@font/product_sans_r"
        android:letterSpacing="0.05"
        android:text="@string/google_login"
        android:textAllCaps="true"
        android:textColor="@color/blue3"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/bgimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSignup"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        android:fontFamily="@font/product_sans_b"
        android:text="REGISTER"
        android:textColor="@color/blue3"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/bgimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeparator" />

    <Button
        android:id="@+id/btnForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_transparent"
        android:fontFamily="@font/product_sans_b"
        android:text="@string/forgot_pass"
        android:textAllCaps="true"
        android:textColor="@color/blue2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnNewUser"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_transparent"
        android:fontFamily="@font/product_sans_b"
        android:text="New User? Click Here to Sign up"
        android:textAllCaps="true"
        android:textColor="@color/blue2"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_transparent"
        android:fontFamily="@font/product_sans_b"
        android:text="Already registered? Click Here to login"
        android:textAllCaps="true"
        android:textColor="@color/blue2"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>