<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_submit"
        android:fontFamily="@font/product_sans_b"
        android:text="@string/kirim"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/product_sans_r"
        android:text="Pastikan fitur lokasi pada perangkat anda aktif, dan lokasi yang tertera sama / mendekati lokasi aktual dimana anda berada untuk mempercepat proses pelaporan."
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/product_sans_b"
        android:text="Detail Laporan"
        android:textColor="@color/blue4"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="250dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/login_bgimg_white" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="250dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/preview_description_background"
        android:clickable="true"
        android:fontFamily="@font/product_sans_r"
        android:gravity="bottom"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/default_description"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/tvJenisLaporanPreview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/tv_jenis_laporan_cameraview"
        android:fontFamily="@font/product_sans_b"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/lapor"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/btnCancelLaporan"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_cancel_preview"
        android:fontFamily="@font/product_sans_b"
        android:text="CANCEL"
        android:textColor="@color/red_notice"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imgPreview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/home_borderbox_form"
        android:elevation="4dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvLocTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/product_sans_b"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="Lokasi Anda"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingStart="16dp">

            <ImageView
                android:id="@+id/imgIconLoc"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_weight="0"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/tvLocationPreview"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:fontFamily="@font/product_sans_r"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>