<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hurahura.ray.laporgan.HomeActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.mapwithmarker.MapsMarkerActivity" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_submit"
        android:fontFamily="@font/product_sans_b"
        android:text="@string/kirim"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        fab:layout_constraintBottom_toBottomOf="parent"
        fab:layout_constraintEnd_toEndOf="parent"
        fab:layout_constraintHorizontal_bias="1.0"
        fab:layout_constraintStart_toStartOf="parent"
        fab:layout_constraintTop_toBottomOf="@+id/home_report_form"
        fab:layout_constraintVertical_bias="1.0" />

    <com.wonderkiln.camerakit.CameraView
        android:id="@+id/cameraView"
        android:layout_width="0dp"
        android:layout_height="394dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/black"
        android:visibility="gone"
        fab:ckCropOutput="true"
        fab:ckFacing="back"
        fab:ckFlash="off"
        fab:ckFocus="continuous"
        fab:ckJpegQuality="100"
        fab:ckMethod="standard"
        fab:ckPermissions="strict"
        fab:layout_constraintBottom_toBottomOf="parent"
        fab:layout_constraintEnd_toEndOf="parent"
        fab:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnCapture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_shuttercam" />

        <Button
            android:id="@+id/btnFlash"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|right|center"
            android:layout_marginBottom="42dp"
            android:layout_marginRight="66dp"
            android:background="@drawable/ic_flashoff" />

        <Button
            android:id="@+id/btnJenisLaporan"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|left"
            android:layout_marginBottom="42dp"
            android:layout_marginLeft="66dp"
            android:background="@drawable/ic_lapor" />

        <TextView
            android:id="@+id/tvJenisLaporan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/tv_jenis_laporan_cameraview"
            android:fontFamily="@font/product_sans_b"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/lapor"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/white_pressed"
            android:textSize="12sp" />
    </com.wonderkiln.camerakit.CameraView>

    <LinearLayout
        android:id="@+id/home_report_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/home_borderbox_form"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="invisible"
        fab:layout_constraintEnd_toEndOf="parent"
        fab:layout_constraintHorizontal_bias="1.0"
        fab:layout_constraintStart_toStartOf="parent"
        fab:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue3"
            android:ems="10"
            android:fontFamily="@font/product_sans_b"
            android:hint="Judul Laporan*"
            android:inputType="textShortMessage"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black_opaque"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/blue3"
            android:ems="10"
            android:fontFamily="@font/product_sans_r"
            android:gravity="top"
            android:hint="Deskripsi Laporan"
            android:inputType="textMultiLine"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:singleLine="false"
            android:textColor="@color/black"
            android:textColorHint="@color/black_opaque"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/fab_home"
        style="@android:style/Widget.Button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_fab_home"
        android:clickable="true"
        android:elevation="4dp"
        android:visibility="invisible"
        fab:layout_constraintBottom_toBottomOf="parent"
        fab:layout_constraintEnd_toEndOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/imagePreview"
        android:layout_width="394dp"
        android:layout_height="394dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        fab:layout_constraintBottom_toBottomOf="parent"
        fab:layout_constraintEnd_toEndOf="parent"
        fab:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgCaptured"
            android:layout_width="394dp"
            android:layout_height="394dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            fab:layout_constraintBottom_toBottomOf="@+id/map"
            fab:layout_constraintEnd_toEndOf="parent"
            fab:layout_constraintStart_toStartOf="parent"
            fab:srcCompat="@drawable/button_submit_pressed" />

        <Button
            android:id="@+id/btnImageDiscard"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_fab_home_close"
            fab:layout_constraintEnd_toEndOf="parent"
            fab:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/fab_home_close"
        style="@android:style/Widget.Button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_fab_home_close"
        android:clickable="true"
        android:elevation="4dp"
        android:visibility="invisible"
        fab:layout_constraintBottom_toBottomOf="parent"
        fab:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/fab_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_submit_enabled"
        android:fontFamily="@font/product_sans_r"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:visibility="invisible"
        fab:layout_constraintBottom_toBottomOf="parent"
        fab:layout_constraintEnd_toStartOf="@+id/fab_home"
        fab:layout_constraintHorizontal_bias="1.0"
        fab:layout_constraintStart_toStartOf="parent" />


    <!--<com.getbase.floatingactionbutton.FloatingActionsMenu-->
        <!--android:id="@+id/fab_home_main"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:layout_marginEnd="16dp"-->
        <!--fab:fab_addButtonColorNormal="@color/white"-->
        <!--fab:fab_addButtonColorPressed="@color/white_pressed"-->
        <!--fab:fab_addButtonPlusIconColor="@color/blue4"-->
        <!--fab:fab_labelsPosition="left"-->
        <!--fab:layout_constraintBottom_toBottomOf="parent"-->
        <!--fab:layout_constraintEnd_toEndOf="parent">-->

        <!--<com.getbase.floatingactionbutton.FloatingActionButton-->
            <!--android:id="@+id/action_sampah"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--fab:fab_colorNormal="@color/blue4"-->
            <!--fab:fab_colorPressed="@color/blue3"-->
            <!--fab:fab_icon="@drawable/ic_sampah"-->
            <!--fab:fab_size="mini"-->
            <!--fab:fab_title="@string/sampah" />-->

        <!--<com.getbase.floatingactionbutton.FloatingActionButton-->
            <!--android:id="@+id/action_lapor"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--fab:fab_colorNormal="@color/blue4"-->
            <!--fab:fab_colorPressed="@color/blue3"-->
            <!--fab:fab_icon="@drawable/ic_lapor"-->
            <!--fab:fab_size="mini"-->
            <!--fab:fab_title="@string/lapor" />-->

    <!--</com.getbase.floatingactionbutton.FloatingActionsMenu>-->


</android.support.constraint.ConstraintLayout>
